@@ -277,12 +277,7 @@ int	*num;
 
 	if (!opened)
 		openconf();
-#ifdef HAVE_SNPRINTF
-	snprintf(buf, sizeof(buf),
-#else
-	sprintf(buf,
-#endif /* HAVE_SNPRINTF */
-		":%s#", name);
+	snprintf(buf, sizeof(buf), ":%s#", name);
 	if ((p = locatestring(line, buf, MATCH_FIRST)) != NULL) {
 		p += strlen(buf);
 		if (num != NULL)
@@ -312,12 +307,7 @@ STRBUF	*sb;
 		openconf();
 	if (!strcmp(name, "suffixes") || !strcmp(name, "skip"))
 		all = 1;
-#ifdef HAVE_SNPRINTF
-	snprintf(buf, sizeof(buf),
-#else
-	sprintf(buf,
-#endif /* HAVE_SNPRINTF */
-		":%s=", name);
+	snprintf(buf, sizeof(buf), ":%s=", name);
 	p = line;
 	while ((p = locatestring(p, buf, MATCH_FIRST)) != NULL) {
 		if (exist && sb)
@@ -348,12 +338,7 @@ const char *name;
 
 	if (!opened)
 		openconf();
-#ifdef HAVE_SNPRINTF
-	snprintf(buf, sizeof(buf),
-#else
-	sprintf(buf,
-#endif /* HAVE_SNPRINTF */
-		":%s:", name);
+	snprintf(buf, sizeof(buf), ":%s:", name);
 	if (locatestring(line, buf, MATCH_FIRST) != NULL)
 		return 1;
 	return 0;
